Refactoring protofile and code  To have only one handler for collecting and storing multiple stations with stream response
