# protobuff/stations.swagger.json
@@ -11,47 +11,9 @@
     "application/json"
   ],
   "paths": {
-    "/many/{stationName}": {
-      "get": {
-        "operationId": "MyService_GetManyStationWorkload",
-        "responses": {
-          "200": {
-            "description": "A successful response.(streaming responses)",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "result": {
-                  "$ref": "#/definitions/StationData"
-                },
-                "error": {
-                  "$ref": "#/definitions/runtimeStreamError"
-                }
-              },
-              "title": "Stream result of StationData"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/runtimeError"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "stationName",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "MyService"
-        ]
-      }
-    },
     "/{stationName}": {
       "get": {
+        "summary": "rpc GetStationWorkload(GetStationWorkloadRequest) returns (GetStationWorkloadResponse){\n    option (google.api.http) = {\n      get: \"/{stationName}/{isUpdateDB}\"\n    };\n  }",
         "operationId": "MyService_GetStationWorkloadFromDB",
         "responses": {
           "200": {
@@ -85,9 +47,18 @@
         "operationId": "MyService_GetStationWorkload",
         "responses": {
           "200": {
-            "description": "A successful response.",
+            "description": "A successful response.(streaming responses)",
             "schema": {
-              "$ref": "#/definitions/GetStationWorkloadResponse"
+              "type": "object",
+              "properties": {
+                "result": {
+                  "$ref": "#/definitions/StationData"
+                },
+                "error": {
+                  "$ref": "#/definitions/runtimeStreamError"
+                }
+              },
+              "title": "Stream result of StationData"
             }
           },
           "default": {
@@ -137,20 +108,6 @@
           "items": {
             "$ref": "#/definitions/StationData"
           }
-        }
-      }
-    },
-    "GetStationWorkloadResponse": {
-      "type": "object",
-      "properties": {
-        "WorkLoad": {
-          "type": "object",
-          "additionalProperties": {
-            "$ref": "#/definitions/DayWork"
-          }
-        },
-        "Error": {
-          "type": "string"
         }
       }
     },
